# TinyVBD

./: .gitignore  CMakeLists.txt  README.md  Strand.h  Types.h  VisualizeStrand.blend  main.cpp
